--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
             "email": "thesidspears@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "sidspears\\": "src"
+        }
+    }
 }
